@@ -13,7 +13,7 @@ useDynLib(SeqArray,
     SEQ_Quote, SEQ_GetData, SEQ_Apply_Variant, SEQ_Apply_Sample,
     SEQ_BApply_Variant,
     SEQ_ConvBEDFlag, SEQ_ConvBED2GDS,
-    SEQ_SelectFlag,
+    SEQ_SelectFlag, SEQ_ResetChrom,
     SEQ_IntAssign,
     SEQ_Pkg_Init,
     SEQ_bgzip_create, SEQ_Progress, SEQ_ProgressAdd,
