@@ -14,7 +14,7 @@ install:
 
 environment:
   matrix:
-  - R_VERSION: 3.6.0
+  - R_VERSION: 3.5.3
     R_ARCH: x64
     BIOC_USE_DEVEL: FALSE
 
